src/parser/shellParser.py
# Generated from shellParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class shellParser ( Parser ):

    grammarFileName = "shellParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'|'", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "WS", "PIPE", "SEMICOLON", "SINGLE_QUOTED", 
                      "DOUBLE_QUOTED", "BACKQUOTED", "REDIRECT_INPUT", "REDIRECT_OUTPUT", 
                      "UNQUOTED" ]

    RULE_cmdline = 0
    RULE_commands = 1
    RULE_command = 2
    RULE_pipe = 3
    RULE_call = 4
    RULE_cmd = 5
    RULE_subcommand = 6
    RULE_atom = 7
    RULE_argument = 8
    RULE_unquoted = 9
    RULE_quoted = 10
    RULE_redirection = 11

    ruleNames =  [ "cmdline", "commands", "command", "pipe", "call", "cmd", 
                   "subcommand", "atom", "argument", "unquoted", "quoted", 
                   "redirection" ]

    EOF = Token.EOF
    WS=1
    PIPE=2
    SEMICOLON=3
    SINGLE_QUOTED=4
    DOUBLE_QUOTED=5
    BACKQUOTED=6
    REDIRECT_INPUT=7
    REDIRECT_OUTPUT=8
    UNQUOTED=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CmdlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(shellParser.EOF, 0)

        def commands(self):
            return self.getTypedRuleContext(shellParser.CommandsContext,0)


        def getRuleIndex(self):
            return shellParser.RULE_cmdline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdline" ):
                return visitor.visitCmdline(self)
            else:
                return visitor.visitChildren(self)




    def cmdline(self):

        localctx = shellParser.CmdlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cmdline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1008) != 0):
                self.state = 24
                self.commands()


            self.state = 27
            self.match(shellParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.CommandContext)
            else:
                return self.getTypedRuleContext(shellParser.CommandContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(shellParser.SEMICOLON)
            else:
                return self.getToken(shellParser.SEMICOLON, i)

        def getRuleIndex(self):
            return shellParser.RULE_commands

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommands" ):
                return visitor.visitCommands(self)
            else:
                return visitor.visitChildren(self)




    def commands(self):

        localctx = shellParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_commands)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.command()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 30
                self.match(shellParser.SEMICOLON)
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1008) != 0):
                    self.state = 31
                    self.command()


                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pipe(self):
            return self.getTypedRuleContext(shellParser.PipeContext,0)


        def getRuleIndex(self):
            return shellParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = shellParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.pipe()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.CallContext)
            else:
                return self.getTypedRuleContext(shellParser.CallContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(shellParser.PIPE)
            else:
                return self.getToken(shellParser.PIPE, i)

        def getRuleIndex(self):
            return shellParser.RULE_pipe

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipe" ):
                return visitor.visitPipe(self)
            else:
                return visitor.visitChildren(self)




    def pipe(self):

        localctx = shellParser.PipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pipe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.call()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 42
                self.match(shellParser.PIPE)
                self.state = 43
                self.call()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(shellParser.CmdContext,0)


        def redirection(self):
            return self.getTypedRuleContext(shellParser.RedirectionContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(shellParser.WS)
            else:
                return self.getToken(shellParser.WS, i)

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(shellParser.ArgumentContext,i)


        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.AtomContext)
            else:
                return self.getTypedRuleContext(shellParser.AtomContext,i)


        def subcommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.SubcommandContext)
            else:
                return self.getTypedRuleContext(shellParser.SubcommandContext,i)


        def getRuleIndex(self):
            return shellParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = shellParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 9]:
                self.state = 49
                self.cmd()
                pass
            elif token in [7, 8]:
                self.state = 50
                self.redirection()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.match(shellParser.WS) 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1008) != 0):
                self.state = 62
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 59
                    self.argument()
                    pass

                elif la_ == 2:
                    self.state = 60
                    self.atom()
                    pass

                elif la_ == 3:
                    self.state = 61
                    self.subcommand()
                    pass


                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 67
                self.match(shellParser.WS)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_QUOTED(self):
            return self.getToken(shellParser.SINGLE_QUOTED, 0)

        def DOUBLE_QUOTED(self):
            return self.getToken(shellParser.DOUBLE_QUOTED, 0)

        def BACKQUOTED(self):
            return self.getToken(shellParser.BACKQUOTED, 0)

        def UNQUOTED(self):
            return self.getToken(shellParser.UNQUOTED, 0)

        def getRuleIndex(self):
            return shellParser.RULE_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = shellParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 624) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubcommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BACKQUOTED(self):
            return self.getToken(shellParser.BACKQUOTED, 0)

        def getRuleIndex(self):
            return shellParser.RULE_subcommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubcommand" ):
                return visitor.visitSubcommand(self)
            else:
                return visitor.visitChildren(self)




    def subcommand(self):

        localctx = shellParser.SubcommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subcommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(shellParser.BACKQUOTED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(shellParser.RedirectionContext,0)


        def argument(self):
            return self.getTypedRuleContext(shellParser.ArgumentContext,0)


        def getRuleIndex(self):
            return shellParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = shellParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.redirection()
                pass
            elif token in [4, 5, 6, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.QuotedContext)
            else:
                return self.getTypedRuleContext(shellParser.QuotedContext,i)


        def unquoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(shellParser.UnquotedContext)
            else:
                return self.getTypedRuleContext(shellParser.UnquotedContext,i)


        def getRuleIndex(self):
            return shellParser.RULE_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = shellParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 83
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [4, 5, 6]:
                        self.state = 81
                        self.quoted()
                        pass
                    elif token in [9]:
                        self.state = 82
                        self.unquoted()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 85 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnquotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNQUOTED(self):
            return self.getToken(shellParser.UNQUOTED, 0)

        def getRuleIndex(self):
            return shellParser.RULE_unquoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnquoted" ):
                return visitor.visitUnquoted(self)
            else:
                return visitor.visitChildren(self)




    def unquoted(self):

        localctx = shellParser.UnquotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unquoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(shellParser.UNQUOTED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_QUOTED(self):
            return self.getToken(shellParser.SINGLE_QUOTED, 0)

        def DOUBLE_QUOTED(self):
            return self.getToken(shellParser.DOUBLE_QUOTED, 0)

        def BACKQUOTED(self):
            return self.getToken(shellParser.BACKQUOTED, 0)

        def getRuleIndex(self):
            return shellParser.RULE_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuoted" ):
                return visitor.visitQuoted(self)
            else:
                return visitor.visitChildren(self)




    def quoted(self):

        localctx = shellParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_quoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REDIRECT_INPUT(self):
            return self.getToken(shellParser.REDIRECT_INPUT, 0)

        def argument(self):
            return self.getTypedRuleContext(shellParser.ArgumentContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(shellParser.WS)
            else:
                return self.getToken(shellParser.WS, i)

        def REDIRECT_OUTPUT(self):
            return self.getToken(shellParser.REDIRECT_OUTPUT, 0)

        def getRuleIndex(self):
            return shellParser.RULE_redirection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirection" ):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)




    def redirection(self):

        localctx = shellParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(shellParser.REDIRECT_INPUT)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 92
                    self.match(shellParser.WS)
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 98
                self.argument()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(shellParser.REDIRECT_OUTPUT)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 100
                    self.match(shellParser.WS)
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





